# returns-refunds-agent

./: .gitignore  deploy_lambdas.py  lab-prompts.md  setup_cognito.py  test_gateway.py  test_lambdas.py
.kiro/steering/: returns-refunds-domain.md
AgentCoreProject/agentcore/: agentcore.json  aws-targets.json
AgentCoreProject/agentcore/.cli/: deployed-state.json
AgentCoreProject/agentcore/cdk/: package-lock.json
AgentCoreProject/app/CustomerAssistantAgent/: main.py  pyproject.toml
AgentCoreProject/tool_specs/: data_lookup.json  policy_retrieval.json
lambda_functions/data_lookup/: README.md  handler.py  requirements.txt
lambda_functions/policy_retrieval/: README.md  handler.py  requirements.txt
